suggested changes